# Rust-Resources

./: .gitattributes  .gitignore  Cargo.toml  Code_Struc_Org.docx  README.md  Rust Leveling.txt  recall.rs
Api/GraphQL/sample/: .env  Cargo.toml  docker-compose.yml
Api/GraphQL/sample/migrations/: 20251116145124_create_users.sql
Api/GraphQL/sample/src/: db.rs  main.rs  models.rs  schema.rs
Api/GraphQL/sample/src/graphql/: mod.rs  mutation.rs  queries.rs  subscription.rs
Auth/auth_example/: .env  Cargo.toml
Auth/auth_example/migrations/: 20251119034002_auth_users.sql
Auth/auth_example/src/: config.rs  db.rs  main.rs
Auth/auth_example/src/handlers/: auth_handler.rs
Auth/auth_example/src/models/: refresh_token.rs  user.rs
Auth/auth_example/src/routes/: auth.rs
Auth/auth_example/src/services/: auth_services.rs
Auth/auth_example/src/utils/: jwt.rs  password.rs
Axum/Axum_Core_Concepts/: Cargo.toml
Axum/Axum_Repo/Sample_Project_Boilerplate/: Cargo.toml
Axum/Axum_Repo/Sample_Project_Boilerplate/Migrations/: xyz_create_table.sql
Axum/Axum_Repo/Sample_Project_Boilerplate/src/: error.rs  handlers.rs  main.rs  model.rs  routes.rs
Axum/General/: Cargo.toml
Axum/Middleware/: Cargo.toml
Axum/Responses/: Cargo.toml
Axum/Router/: Cargo.toml
Braining/picDB/: .env  Cargo.toml
Braining/picDB/migrations/: 20251020120412_pictures.sql
Braining/picDB/simpleserver/: main.py
Braining/picDB/src/: db.rs  main.rs  routes.rs
Crates/Axum/Test_Servers/Test_10/: Cargo.toml
Crates/Axum/Test_Servers/Test_10/src/: main.rs
Crates/Axum/Test_Servers/Test_13/: Cargo.toml
Crates/Axum/Test_Servers/Test_13/src/: main.rs
Crates/Dotenv/: .env  Cargo.toml
Crates/Http_Reqwest/: Cargo.toml
Crates/Http_Reqwest/Http_Exer1/: Cargo.toml
Crates/Http_Reqwest/Http_Exer1/src/: get.rs  main.rs  post.rs
Crates/Http_Reqwest/http_recap/: Cargo.toml
Crates/Http_Reqwest/http_recap/src/recap/: async_.rs  blocking.rs  mod.rs
Crates/JWT/axum-jwt-auth/: Cargo.toml  README.MD
Crates/JWT/axum-jwt-auth/src/: auth.rs  main.rs  middleware.rs  model.rs
Crates/Networking/: Cargo.toml
Crates/Recaps/SqlxCrate/Test_1/: Cargo.toml  Dockerfile  docker-compose.yml  insert.rs
Crates/Recaps/SqlxCrate/Test_1/src/: main.rs
Crates/Somesql/: .gitignore  chart.dio  crud.sql  note.txt  sqlx.rs  try.rs
Crates/reqwest-http/: Cargo.toml
Crates/reqwest_http/: Cargo.toml
Crates/sqlx-db/: .env  Cargo.toml  main.ps1  start_cemall.bat
Crates/sqlx-db/Core/: .gitignore  docker-compose.yml  sample.rs
Crates/sqlx-db/Core/src/: main.rs  mine.rs
Crates/sqlx-db/CrudWithSqlx_Axum/: Cargo.toml  query.sql
Crates/sqlx-db/CrudWithSqlx_Axum/src/: main.rs  models.rs  routes.rs
Crates/sqlx-db/FullCrud/Test1/: Cargo.toml
Crates/sqlx-db/FullCrud/Test1/src/: main.rs
Crates/sqlx-db/FullCrud/Test2/: .env  Cargo.toml
Crates/sqlx-db/FullCrud/Test2/src/: main.rs
Crates/sqlx-db/Sqlx_Course/: Cargo.toml  docker-compose.yml
Crates/sqlx-db/Sqlx_Course/Schema/: profile.sql
Crates/sqlx-db/Sqlx_Course/migrations/: 20251007035049_profile_Table.sql  20251007041827_message_table.sql
Crates/sqlx-db/Sqlx_Course/src/: insert.rs  model.rs
Crates/sqlx-db/Test/: Cargo.toml
Crates/sqlx-db/Test/migrations/: 20251108162148_developer.sql
Crates/sqlx-db/Test/src/: insert.rs  main.rs  model.rs
Crates/sqlx-db/Test_1/: Cargo.toml  main.rs
Crates/sqlx-db/Test_1/src/: insert.rs  main.rs  model.rs  select.rs
Crates/sqlx-db/Test_3/src/: main.rs
Crates/sqlx-db/Test_4/: Cargo.toml
Crates/sqlx-db/Test_5/: Cargo.toml
Crates/sqlx-db/Test_5/src/: main.rs
Crates/sqlx-db/Test_6/migrations/: 20251012180657_users.sql
Crates/sqlx-db/Test_6/src/: main.rs
Crates/sqlx-db/Try/: Cargo.toml
Crates/sqlx-db/Try/src/: db.rs  main.rs
Crates/sqlx-db/insert_profile/: Cargo.toml
Crates/sqlx-db/insert_profile/src/: main.rs
Crates/sqlx-db/test_7/: Cargo.toml
Crates/sqlx-db/test_7/src/: main.rs
Crates/test_http/: Cargo.toml  index.html
Exercises/Crates/Production/: Cargo.toml
Exercises/Crates/Production/migrations/: 20251024233801_users.sql
Exercises/Crates/Production/src/: Update.rs  create.rs  delete.rs  main.rs  readAll.rs  readOne.rs
Exercises/beginner/: mod.rs  mod_ans.rs
Exercises/ctrlflow/: Cargo.toml
Exercises/vars_Immut/: Cargo.toml
General/Async/: Cargo.toml
General/Box_Rc_Arc_Mutex/: Cargo.toml
General/Derefrencing/: Cargo.toml
General/Genandtraits/: Cargo.toml
General/Hashmaps/: Cargo.toml
General/IterMethods/: Cargo.toml
General/RefandBorrowing/: Cargo.toml
General/States_And_dyn/: Cargo.toml
General/Vec/: Cargo.toml
General/serdecrate/: Cargo.toml
General/structs/Phase1/: Cargo.toml
General/structs/Phase1/src/: main.rs
General/structs/Phase2/: .env  Cargo.toml  index.html  main.txt
General/structs/Phase2/migrations/: 20251106161323_createUser.sql
General/structs/Phase2/src/: fake1000.rs  main.rs
General/vars_Consts/: Cargo.toml
Recap/CollectionTypes/: Cargo.toml
Recap/Test_3/: Cargo.toml
RustBooks/: Books_and_Software_for_Rust_Python_AI_Backend.docx  Essential_Skills_Rust_Backend_Developer.docx  Rust_Backend_Development_Guide (1).docx
Rust_Programming_Book/: rust_impl_exercises.rs  rust_impl_with_answers (1).rs
Rust_Programming_Book/AsyncInRust/: Cargo.toml
Rust_Programming_Book/CLI/: Cargo.toml
Rust_Programming_Book/Enums_PatternMatching/: Cargo.toml
Rust_Programming_Book/matchctrlflowconstruct/: Cargo.toml
Variables/: compound.rs  primitive.rs
async/: async_fn.rs
beginner/: ans.rs  data_types.rs  recall.rs
projects/Phase3/: Cargo.toml
projects/Phase3/src/: main.rs
projects/Signup/: Cargo.toml
projects/Signup/src/: .env  ReadMe.md  auth.rs  errors.rs  main.rs  models.rs
projects/Signup/src/migrations/: .sql
projects/phase1/: .env  Cargo.toml
projects/phase1/src/: get.rs  main.rs  post.rs
projects/tryQuant/: Cargo.toml  Dockerfile  QuantResearch.md  requirement.txt
projects/tryQuant/src/: data.csv  main.rs
quiz_tool/: Cargo.toml
src/: Arrays.rs  PrimitivesVariables.rs  compoundVariables.rs  tuples.rs
(+293 files in other folders)
