[package]
name = "auth_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","macros"] }
argon2 = "0.4"
rand = "0.8"
tower-cookies = "0.5"
dotenvy = "0.15"
anyhow = "1.0"
