[package]
name = "picDB"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }

