[package]
name = "Phase3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"          # Web framework
tokio = { version = "1.42", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For serializing/deserializing if needed
serde_json = "1.0"    # Optional, for JSON communication
once_cell = "1.17"    # For Lazy static storage
