[package]
name = "Signup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["headers"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
 dotenvy = "0.15"
argon2 = "0.4"
jsonwebtoken = "8"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "0.2"
tower-http = { version = "0.3", features = ["cors"] }