[package]
name = "phase1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
error = "0.1.9"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["std"] }
tokio = { version = "1.48.0", features = ["full"] }
