[package]
name = "quant-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Data handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# External requests (e.g., Yahoo API)
reqwest = { version = "0.11", features = ["json"] }

# Optional math / stats
statrs = "0.17"
ndarray = "0.15"
nalgebra = "0.32"
