[package]
name = "Sample_Project_Boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "8", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tower-http = { version = "0.4", features = ["cors"] }
bcrypt = "0.14"
