[package]
name = "http_recap"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }  # for async examples
serde = { version = "1", features = ["derive"] } # for JSON serialize/deserialize
serde_json = "1"
