[package]
name = "CrudWithSqlx_Axum"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

