[package]
name = "test_7"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",  # for async runtime
    "macros",         # enables query macros
    "postgres",       # your database
    "uuid",           # add UUID support
    "chrono"          # add DateTime<Utc> support
] }
error = "0.1.9"
