[package]
name = "Test_10"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
error = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
